@@ -97,6 +97,7 @@ public:
         opt_resetmapper = false;
         opt_startmapper = false;
         opt_fastbioslogo = false;
+        opt_defaultmapper = false;
         opt_alt_vga_render = false;
         opt_date_host_forced = false;
         opt_disable_numlock_check = false;
@@ -130,6 +131,7 @@ public:
     bool opt_disable_numlock_check;
     bool opt_date_host_forced;
     bool opt_alt_vga_render;
+    bool opt_defaultmapper;
     bool opt_fastbioslogo;
     bool opt_break_start;
     bool opt_erasemapper;
